sheerun's rails-4 bootstrap
https://github.com/sheerun/rails4-bootstrap

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,8 @@
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
+
+/config/database.yml
+
+# Ignore local application configuration
+/.env*
